InfoBar: Fix wrong/uninit var use in code example

https://bugzilla.gnome.org/show_bug.cgi?id=786144